# ai-interview-service

./: .gitignore  Makefile  README.md  app.db  pyproject.toml  report-viewer.jsx  ws-test.html
alembic/: env.py
alembic/versions/: 58b061b34258_add_reports_table.py  5ce16f76d66b_add_answers_and_analytics.py  e6fd101d9bd0_add_user_id_company_to_sessions.py
app/: main.py
app/api/: __init__.py
app/api/routes/: answers.py  reports.py  sessions.py
app/core/: auth.py
app/db/: models.py
app/services/: llm.py  report_llm.py
back/: docker-compose.yml  pyproject.toml
back/alembic/versions/: 8ccea5c342d3_create_sessions_questions.py  ac6c44fb3d87_add_users_and_session_user_id_company.py
back/app/api/routes/: auth.py  realtime.py  uploads.py
back/app/core/: auth.py  config.py
back/app/services/: analyze.py  stt.py
front/: index.html  package-lock.json  package.json
front/src/: App.jsx  index.css  main.jsx
front/src/components/: Layout.jsx
front/src/hooks/: useAuth.js
front/src/lib/: api.js
front/src/pages/: Dashboard.jsx  Interview.jsx  Login.jsx  NewSession.jsx  Report.jsx  Sessions.jsx  Signup.jsx
report-viewer/: package-lock.json  package.json
report-viewer/src/: App.jsx
tests/: test_import.py
